# MAJORDRAFT

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
config/experiments/: debug_small.yaml  loso_4class.yaml
notebooks/: 00_setup_and_run.ipynb  01_data_exploration.ipynb  02_gan_analysis.ipynb  03_rl_analysis.ipynb  04_ablation_study.ipynb  05_cross_validation.ipynb  06_results_analysis.ipynb
scripts/: evaluate.py  export_model.py  inference.py  preprocess_deap.py  preprocess_iemocap.py  train_eeg.py  train_full_pipeline.py  train_fusion.py  train_gan.py  train_rl.py  train_speech.py  verify_setup.py
src/: __init__.py
src/data/: __init__.py  dataset.py  deap_loader.py  eeg_preprocessor.py  iemocap_loader.py  label_mapper.py  speech_preprocessor.py
src/evaluation/: __init__.py  ablation.py  cross_validation.py  metrics.py  report_generator.py
src/models/: __init__.py  classifier.py  eeg_encoder.py  fusion.py  gan.py  speech_encoder.py
src/rl/: __init__.py  environment.py  policy_network.py  ppo_agent.py  reward.py  value_network.py
src/training/: __init__.py  fusion_trainer.py  gan_trainer.py  pipeline.py  rl_trainer.py  speech_trainer.py
src/utils/: __init__.py  checkpoint.py  config.py  device.py  logging_setup.py  paths.py  seed.py  visualization.py
tests/: __init__.py  test_dataset.py  test_eeg_encoder.py  test_environment.py  test_fusion.py  test_gan.py  test_label_mapper.py  test_metrics.py  test_ppo.py  test_reward.py  test_speech_encoder.py
